--- a/style.css
+++ b/style.css
@@ -12,6 +12,13 @@ header {
     padding: 20px;
     margin-bottom: 20px;
 }
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    margin-bottom: 20px;
+}
 h1 {
     margin-top: 0;
 }
@@ -29,13 +36,13 @@ nav {
 
 nav a {
     text-decoration: none;
-    color: #0de030;
+    color: #ffffff;
     padding: 10px;
     display: inline-block;
 }
 
 nav a:hover {
-    background-color: #ddd;
+    background-color: #ffffff;
 }
 
 main {
