--- a/style.css
+++ b/style.css
@@ -3,125 +3,124 @@
 body{
     font-family: 'Montserrat', sans-serif;
     margin: 0px;
-    scroll-behavior: smooth;
+    color: #3e363f;
+    padding-top: 70px;
 }
-header {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
-    margin-bottom: 20px;
-}
-footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
-    margin-bottom: 20px;
-}
-h1 {
-    margin-top: 0;
-}
-
-h2 {
-    margin-bottom: 10px;
-}
-
 nav {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    text-align: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+    box-shadow: 0 0 5px rgba (0,0,0, 0.1);
 }
-
-nav a {
+.menu-item {
     text-decoration: none;
-    color: #ffffff;
+    color: #333;
     padding: 10px;
     display: inline-block;
 }
-
-nav a:hover {
-    background-color: #ffffff;
-}
-
-main {
+.menu-item:hover {
+    background-color: #ddd;
+    transition: all 0.1s ease-in-out;
+  }
+  header {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    margin-bottom: 20px;
+  }
+  main {
     max-width: 800px;
     margin: 0 auto;
 }
-
-section {
+  section {
     padding: 20px;
     border: 1px solid #ddd;
     margin-bottom: 20px;
-}
-#acerca-de-mi p {
+  }
+  #acerca-de-mi {
     text-align: justify;
-}
-#habilidades ul {
+        box-shadow: 0 0 10px rgba(82, 119, 187, 0.6);
+  }
+  #habilidades {
+    box-shadow: 0 0 10px rgba(82, 119, 187, 0.6);
+  }
+  #experiencia {
+    box-shadow: 0 0 10px rgba(82, 119, 187, 0.6);
+  }
+  #proyectos {
+    box-shadow: 0 0 10px rgba(82, 119, 187, 0.6);
+  }
+  #contacto {
+    box-shadow: 0 0 10px rgba(82, 119, 187, 0.6);
+  }
+  #habilidades ul {
     list-style: none;
     padding: 0;
-    margin: 0;
-}
-
-#habilidades ul li {
+  }
+  
+  #habilidades ul li {
     display: inline-block;
     padding: 5px;
     border: 1px solid #ddd;
     border-radius: 5px;
     margin-right: 10px;
-}
-#experiencia ul {
+    background-color: #ffffff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s, box-shadow 0.3s, transform 0.3s;
+  }
+  #experiencia ul {
     list-style: none;
     padding: 0;
     margin: 0;
-}
-
-#experiencia ul li {
+  }
+  
+  #experiencia ul li {
     margin-bottom: 10px;
-}
-
-#experiencia ul li strong {
-    font-weight: bold;
-}
-#proyectos ul {
+  }
+  #experiencia ul li strong{
+    font-style: bold;
+  }
+  #proyectos ul {
     list-style: none;
     padding: 0;
     margin: 0;
-}
-
-#proyectos ul li {
-    margin-bottom: 10px;
-}
-
-#proyectos ul li a {
+  }
+  
+  #proyectos ul li a {
     text-decoration: none;
     color: #333;
-}
-
-#proyectos ul li a:hover {
+  }
+  
+  #proyectos ul li a:hover {
     text-decoration: underline;
-}
-#contacto form {
-    margin: 0 auto;
-    width: 500px;
-}
-
-#contacto form input,
-#contacto form textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ddd;
-}
-
-#contacto form textarea {
-    height: 100px;
-}
-
-#contacto form input[type="submit"] {
+  }
+  #sociales {
+    list-style: none;
+    padding: 0;
+    margin-top: 10px;
+  }
+  
+  #sociales li {
+    list-style: none;
+    display: inline-block;
+    padding: 5px;
+  }
+  
+  .fa {
+    color: #333;
+    text-decoration: none;
+    margin-left: 0px;
+  }
+  
+  footer {
     background-color: #333;
     color: #fff;
-    border: none;
-    cursor: pointer;
-}
+    text-align: center;
+    padding: 10px;
+    text-shadow: 0 0 7px rgba(255, 255, 0, 0.8), 
+    0 0 7px rgba(255, 255, 0, 0.8),
+    0 0 7px rgba(255, 255, 0, 0.8);
+  }
